--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3030,9 +3030,9 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+    color: #fff;
+    background-color: #1982FC;
+    border-color: #1982FC;
 }
 .btn-primary:hover {
   color: #fff;
