--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3036,9 +3036,10 @@ textarea.form-control-lg {
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #16a085;
-  border-color: #15967d;
+/*  background-color: #16a085;
+  border-color: #15967d;*/
 }
+
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
   background-color: #16a085;
@@ -3053,11 +3054,11 @@ textarea.form-control-lg {
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(60, 198, 171, 0.5);
 }
-.btn-primary:disabled, .btn-primary.disabled {
-  color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
-}
+    .btn-primary:disabled, .btn-primary.disabled {
+        color: #fff;
+        background-color: #1982FC;
+        border-color: #1982FC;
+    }
 
 .btn-secondary {
   color: #fff;
@@ -11506,4 +11507,58 @@ html {
 
 .copyright {
   background-color: #1a252f;
+}
+
+.dot-flashing {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #cfe3ff;
+    color: #cfe3ff;
+    animation: dot-flashing .5s infinite linear alternate;
+    animation-delay: 0.1s;
+}
+
+    .dot-flashing::before, .dot-flashing::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: 0;
+    }
+
+    .dot-flashing::before {
+        left: -15px;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        background-color: #cfe3ff;
+        color: #cfe3ff;
+        animation: dot-flashing .5s infinite alternate;
+        animation-delay: 0s;
+    }
+
+    .dot-flashing::after {
+        left: 15px;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        background-color: #cfe3ff;
+        color: #cfe3ff;
+        animation: dot-flashing .5s infinite alternate;
+        animation-delay: .5s;
+    }
+
+@keyframes dot-flashing {
+    0% {
+        background-color: #cfe3ff;
+    }
+
+    50%, 100% {
+        background-color: rgba(152, 128, 255, 0.2);
+    }
+}
+
+.no-click {
+    pointer-events: none;
 }
